<resources>
    <string name="app_name">彼岸仿真花</string>
    <!--通用 start-->
    <string name="login_bt_hint">登录</string>
    <string name="login_account_hint">请输入用户名</string>
    <string name="home_menu">主页</string>
    <string name="search_order_no_hint">查询订单号</string>
    <string name="search_flower_no_hint">查鲜花名称</string>
    <string name="nick_name_hint">账户昵称</string>
    <string name="flower_menu">花材目录</string>
    <string name="order_no_hint">订单号</string>
    <string name="order_status_dph">待配货</string>
    <string name="order_status_dck">待出库</string>
    <string name="order_status_dhk">待回库</string>
    <string name="order_status_yhk">已回库</string>
    <string name="order_status_wcqd">完成清点</string>
    <string name="start_date_hint">开始日期</string>
    <string name="end_date_hint">结束日期</string>
    <string name="ch_date_hint">出货时间</string>
    <string name="hs_date_hint">回收时间</string>
    <string name="type_hint">分类</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="flower_count_hint">库存:</string>
    <string name="notice_title_hint">信息通知</string>
    <string name="go_order_hint">立即下单</string>


    <string name="order_base_hint">基础信息</string>
    <string name="order_kh_name">客户姓名：</string>
    <string name="order_kh_name_hint">请填写客户姓名</string>
    <string name="order_kh_address">酒店地址：</string>
    <string name="order_kh_address_hint">请填写地址</string>
    <string name="order_kh_phone">客户电话：</string>
    <string name="order_kh_phone_hint">请填写电话号码</string>

    <string name="order_date_hint">时间信息</string>
    <string name="order_date_hl">婚礼日期：</string>
    <string name="order_date_check_hint">请选择时间</string>
    <string name="order_date_yy_hint">选择日期预约：</string>
    <string name="order_date_ck">出库时间：</string>
    <string name="order_date_hs">回收日期：</string>

    <string name="order_remark">备注信息</string>
    <string name="order_remark_hint">请填写备注信息</string>

    <string name="order_choice_flower">选择鲜花</string>
    <string name="order_flower_name">鲜花名称</string>
    <string name="order_flower_rent">库存</string>
    <string name="order_flower_order">预定数量</string>

    <string name="order_add_flower">增加鲜花种类</string>
    <string name="order_money">租金总额：</string>

    <string name="jeizhang_bt">结账</string>
    <string name="commit_bt">提交</string>
    <string name="queren_bt">确认</string>
    <string name="update_bt">修改</string>
    <string name="warehouse_out_bt">确认出库</string>
    <string name="warehouse_return_bt">确认回收</string>
    <string name="edit_order_bt">修改订单</string>
    <string name="add_order_bt">追加订单</string>

    <string name="add_order_main_no">主订单号</string>
    <string name="add_order_main_info">主订单客户信息</string>
    <string name="add_order_flower">追加鲜花</string>

    <!--通用 end-->
</resources>