<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <include layout="@layout/bar_back"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardElevation="1dp"
        app:cardCornerRadius="@dimen/frame_four_distance"
        app:cardBackgroundColor="@color/white"
        android:layout_margin="@dimen/frame_eight_distance">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/frame_eight_distance">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/frame_text_middle_size"
                android:textColor="@color/text_black_color"
                android:padding="@dimen/frame_eight_distance"
                android:text="@string/add_order_main_no"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/main_order_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/frame_text_normal_size"
                android:textColor="@color/text_black_color"
                android:padding="@dimen/frame_edge_distance"/>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="@dimen/frame_four_distance">
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="vertical">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/frame_text_middle_size"
                        android:textColor="@color/text_black_color"
                        android:padding="@dimen/frame_eight_distance"
                        android:text="@string/add_order_main_info"/>
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="@dimen/frame_four_distance"
                        app:cardElevation="1dp"
                        android:layout_margin="@dimen/frame_four_distance">
                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">
                            <androidx.appcompat.widget.LinearLayoutCompat
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:padding="@dimen/frame_eight_distance">
                                <androidx.appcompat.widget.AppCompatTextView
                                    android:id="@+id/add_order_kh_name"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/text_gray_color"
                                    android:textSize="@dimen/frame_text_normal_size"
                                    android:textStyle="bold"/>
                                <androidx.appcompat.widget.AppCompatTextView
                                    android:id="@+id/add_order_state"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/colorPrimary"
                                    android:textSize="@dimen/frame_text_middle_size"
                                    android:textStyle="bold"/>
                            </androidx.appcompat.widget.LinearLayoutCompat>
                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/add_order_kh_phone"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/text_gray_color"
                                android:textSize="@dimen/frame_text_normal_size"
                                android:padding="@dimen/frame_eight_distance"
                                android:textStyle="bold"/>
                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/add_order_kh_address"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/text_gray_color"
                                android:textSize="@dimen/frame_text_normal_size"
                                android:padding="@dimen/frame_eight_distance"/>
                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/add_order_hl_date"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/text_gray_color"
                                android:textSize="@dimen/frame_text_normal_size"
                                android:padding="@dimen/frame_eight_distance"/>
                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/add_order_ck_date"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/text_gray_color"
                                android:textSize="@dimen/frame_text_normal_size"
                                android:padding="@dimen/frame_eight_distance"/>
                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/add_order_hs_date"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/text_gray_color"
                                android:textSize="@dimen/frame_text_normal_size"
                                android:padding="@dimen/frame_eight_distance"/>
                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/add_order_remark"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/text_gray_color"
                                android:textSize="@dimen/frame_text_normal_size"
                                android:padding="@dimen/frame_eight_distance"/>
                        </androidx.appcompat.widget.LinearLayoutCompat>
                    </androidx.cardview.widget.CardView>
                </androidx.appcompat.widget.LinearLayoutCompat>
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:orientation="vertical">
                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center">
                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/frame_text_normal_size"
                            android:textColor="@color/text_black_color"
                            android:padding="@dimen/frame_eight_distance"
                            android:text="@string/add_order_flower"/>
                    </androidx.appcompat.widget.LinearLayoutCompat>
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="@dimen/frame_four_distance"
                        app:cardBackgroundColor="@color/white"
                        android:layout_margin="@dimen/frame_four_distance"
                        app:cardElevation="1dp">
                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="center">
                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="0dp"
                                android:layout_weight="4"
                                android:layout_height="wrap_content"
                                android:text="@string/order_flower_name"
                                android:textSize="@dimen/frame_text_small_size"
                                android:gravity="center"
                                android:paddingTop="@dimen/frame_eight_distance"
                                android:paddingBottom="@dimen/frame_eight_distance"/>
                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="0dp"
                                android:layout_weight="2"
                                android:layout_height="wrap_content"
                                android:text="@string/order_flower_rent"
                                android:textSize="@dimen/frame_text_small_size"
                                android:gravity="center"
                                android:paddingTop="@dimen/frame_eight_distance"
                                android:paddingBottom="@dimen/frame_eight_distance"/>
                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="0dp"
                                android:layout_weight="2"
                                android:layout_height="wrap_content"
                                android:text="@string/order_flower_order"
                                android:textSize="@dimen/frame_text_small_size"
                                android:gravity="center"
                                android:paddingTop="@dimen/frame_eight_distance"
                                android:paddingBottom="@dimen/frame_eight_distance"/>
                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:text=""
                                android:textSize="@dimen/frame_text_small_size"
                                android:gravity="center"
                                android:paddingTop="@dimen/frame_eight_distance"
                                android:paddingBottom="@dimen/frame_eight_distance"/>
                        </androidx.appcompat.widget.LinearLayoutCompat>
                    </androidx.cardview.widget.CardView>
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/choice_rv"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:layout_margin="@dimen/frame_four_distance"/>
                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:padding="@dimen/frame_eight_distance">
                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:gravity="start|center_vertical">
                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/order_money"
                                android:textSize="@dimen/frame_text_small_size"
                                android:textColor="@color/text_black_color"/>
                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/order_money"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/frame_text_normal_size"
                                android:textColor="@color/colorPrimary"/>
                        </androidx.appcompat.widget.LinearLayoutCompat>
                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/order_commit"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:textColor="@color/text_white_color"
                            android:background="@drawable/frame_btn_selector"
                            android:layout_margin="@dimen/frame_eight_distance"
                            android:text="@string/commit_bt"
                            android:gravity="center"
                            android:padding="@dimen/frame_eight_distance"/>
                    </androidx.appcompat.widget.LinearLayoutCompat>
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

</androidx.appcompat.widget.LinearLayoutCompat>