<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".order.DeliverFragment">

    <include layout="@layout/bar_back" />

    <include
        layout="@layout/alen_progress_layout"
        android:visibility="gone" />

    <androidx.cardview.widget.CardView
        android:id="@+id/item_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/frame_eight_distance"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/frame_four_distance"
        app:cardElevation="@dimen/frame_four_distance">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/layout_bottom"
                android:orientation="vertical">

                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <include layout="@layout/order_item_public_layout"/>
                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:id="@+id/layout_main"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="@dimen/frame_eight_distance">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tv_main_title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:text="历史配货:"
                                android:textColor="@color/text_normal_color"
                                android:textSize="@dimen/frame_text_normal_size" />

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/recyclerview_main"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:padding="@dimen/frame_four_distance" />
                        </androidx.appcompat.widget.LinearLayoutCompat>

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:id="@+id/layout_children"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="@dimen/frame_eight_distance">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tv_children_title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:text="修改配货:"
                                android:textColor="@color/text_normal_color"
                                android:textSize="@dimen/frame_text_normal_size" />

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/recyclerview_children"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:padding="@dimen/frame_four_distance" />
                        </androidx.appcompat.widget.LinearLayoutCompat>
                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="center">
                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/frame_text_normal_size"
                                android:textColor="@color/text_black_color"
                                android:padding="@dimen/frame_eight_distance"
                                android:text="@string/order_remark"/>
                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/remark_update"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/colorPrimary"
                                android:textSize="@dimen/frame_text_smaller_size"
                                android:padding="@dimen/frame_four_distance"
                                android:drawablePadding="@dimen/frame_four_distance"
                                android:drawableStart="@mipmap/ic_logo_01"
                                android:text="@string/update_bt"
                                android:gravity="center"
                                android:visibility="invisible"/>
                        </androidx.appcompat.widget.LinearLayoutCompat>
                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:cardCornerRadius="@dimen/frame_four_distance"
                            app:cardBackgroundColor="@color/white"
                            android:layout_margin="@dimen/frame_four_distance"
                            app:cardElevation="1dp">
                            <androidx.appcompat.widget.AppCompatEditText
                                android:id="@+id/order_remark"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/text_black_color"
                                android:minLines="3"
                                android:maxLines="3"
                                android:textSize="@dimen/frame_text_small_size"
                                android:background="@android:color/transparent"
                                android:padding="@dimen/frame_eight_distance"
                                android:hint="@string/order_remark_hint"
                                android:gravity="start|top"
                                android:lineSpacingMultiplier="1.2"
                                />
                        </androidx.cardview.widget.CardView>
                    </androidx.appcompat.widget.LinearLayoutCompat>
                </androidx.core.widget.NestedScrollView>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/layout_bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:gravity="center_vertical|right"
                android:orientation="horizontal"
                android:padding="@dimen/frame_eight_distance"
                android:visibility="visible">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="@dimen/frame_eight_distance"
                    android:text="已完成所有配货确认才能点击提交"
                    android:textColor="@color/text_normal_color"
                    android:textSize="@dimen/frame_text_smaller_size" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/tv_submit"
                    android:layout_width="@dimen/frame_203_distance"
                    android:layout_height="@dimen/frame_50_distance"
                    android:layout_marginLeft="@dimen/frame_eight_distance"
                    android:layout_marginRight="@dimen/frame_edge_distance"
                    android:background="@drawable/btn_selector"
                    android:text="@string/commit_bt"
                    android:textColor="@color/text_white_color"
                    android:textSize="@dimen/frame_text_normal_size" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</androidx.appcompat.widget.LinearLayoutCompat>